2003-02-24  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: added mcs51-stack-auto to the regression tests
	* support/error-filter.sh: Removed several warnings, added 1 for mcs51-stack-auto

2003-02-23  Bernhard Held <bernhard@bernhardheld.de>

	* Makefile: include building of source archives
	* components/sdcc-extra.mk: add sdcc-extra to the source archives
	* components/sdcc.mk: add sdcc to the source archives
	* lib/bootstrap.mk: include building of source archives
	* lib/src-archive.mk: added

2003-02-23  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: specify host, target and build for configure to avoid all warnings with autoconf 2.54 

>>>>>>> 1.9
2003-02-16  Bernhard Held <bernhard@bernhardheld.de>

	* local/usf-cf-x86-linux-1-i586-mingw32msvc.mk: moved cross-tools to ~/local/

2003-02-14  Bernhard Held <bernhard@bernhardheld.de>

	* local/usf-cf-ppc-macosx-1.mk: --disbale-ucsim
	* components/sdcc.mk: moved share/doc to share/sdcc/doc

2003-02-13  Bernhard Held <bernhard@bernhardheld.de>

	* local/usf-cf-ppc-macosx-1.mk: added
	* components/sdcc.mk: regression test of gbz80 disabled because of (sim?) problems
	* lib/cross.mk: don't touch TARGETCC and TARGETCXX, if it has already been set by local/*.mk

2003-02-11  Bernhard Held <bernhard@bernhardheld.de>

	* support/readme-snapshot.txt: new file; will be the only file in the
	snapshot archives' share/doc
	* components/sdcc.mk: new target sdcc-docs; it cleans the doc dir after
	install and copies readme-snapshot.txt to this dir

2003-02-08  Bernhard Held <bernhard@bernhardheld.de>

	* sdcc-build-bootstrap.sh: create directory $BUILDROOT
	* check before each cvs co, if pserver passwd in ~/.cvspass; if not: login
	* lib/bootstrap: include tidy-up-win32-release.sh; recode installed in ~/local 
